# papermc

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/apis/: configuration.rs  meta_v2_api.rs  meta_v3_api.rs  mod.rs
src/models/: build_response.rs  checksums.rs  commit.rs  download.rs  error_response.rs  java.rs  java_flags.rs  java_version.rs  mod.rs  project.rs  project_response.rs  projects_response.rs  support.rs  version.rs  version_response.rs
